# InkPond

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md
Frameworks/typst_ios.xcframework/: Info.plist
InkPond/: AppAppearanceManager.swift  ContentView.swift  Info.plist  InkPondApp.swift  URL+Identifiable.swift
InkPond.xcodeproj/: project.pbxproj
InkPond/Bridging/: InkPond-Bridging-Header.h  typst_ffi.h
InkPond/Compiler/: BookmarkManager.swift  CompiledPreviewCacheStore.swift  DirectoryMonitor.swift  ExportController.swift  ExportManager.swift  FontManager.swift  LocalPackageStore.swift  PackageArchiveImporter.swift  PreviewPackageCacheStore.swift  ProjectFileManager+Files.swift  ProjectFileManager+Listing.swift  ProjectFileManager+Sync.swift  ProjectFileManager.swift  SourceMap.swift  TypstBridge.swift  TypstCompiler.swift  ZipImporter.swift
InkPond/Editor/: AutoPairEngine.swift  CompletionEngine.swift  CompletionPopupView.swift  EditorFocusCoordinator.swift  EditorTheme.swift  HighlightScheduler.swift  KeyboardAccessoryView.swift  LineNumberGutterView.swift  Snippet.swift  (+6 more)
InkPondTests/: InkPondTests.swift
InkPondUITests/: InkPondUITests.swift
SampleDocuments/: README.md
Typist/: AppAppearanceManager.swift  ContentView.swift  Info.plist  Typist.entitlements  TypistApp.swift  URL+Identifiable.swift
Typist.xcodeproj/: project.pbxproj
TypistTests/: TypistTests.swift
TypistUITests/: TypistUITests.swift
release/: ExportOptions.plist
rust-ffi/: Cargo.toml  build-ios.sh
rust-ffi/src/: lib.rs
scripts/: ensure_typst_xcframework.sh
(+129 files in other folders)
